# german

./: .coverage  .gitignore  .pre-commit-config.yaml  .vcs_config.yaml.example  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Containerfile  README.md  TODO.md  TODO_feature_20251023T103006Z_initial-foundation.md  TODO_feature_20251023T104248Z_certificate-a1.md  TODO_feature_20251023T104355Z_certificate-a2.md  TODO_feature_20251023T104751Z_certificate-b1.md  TODO_feature_20251023T104932Z_certificate-b2.md  TODO_feature_20251023T104957Z_certificate-c1.md  TODO_feature_20251023T105019Z_certificate-c2.md  TODO_feature_20251023T112743Z_workflow-v5x2.md  TODO_feature_20251023T123254Z_workflow.md  TODO_feature_20251103T170721Z_azure-devops-cli.md  TODO_feature_20251108T112041Z_pr-feedback-docs.md  TODO_feature_20251118T021839Z_phase-4-defaults.md  TODO_release_20251104T015104Z_v1-5-0.md  WORKFLOW-INIT-PROMPT.md  WORKFLOW.md  azure-pipelines.yml  coverage.json  make_pdfs.py  podman-compose.yml  pyproject.toml
.git-hooks/: README.md  pre-push
.github/: AZURE_DEVOPS_POLICIES.md  BRANCH_PROTECTION.md  README.md  WORKTREE_CLEANUP_GUIDE.md
ARCHIVED/: CLAUDE.md  README.md  TODO_agentdb-prompt-template.md  TODO_feature_20251103T220043Z_azure-devops-cli.md  TODO_feature_20251104T170000Z_protect-main-develop.md  TODO_feature_20251108T112041Z_pr-feedback-docs.md  TODO_feature_20251108T234501Z_pr-104-issue-1.md  TODO_feature_20251108T234617Z_pr-104-issue-2.md  TODO_feature_20251109T025927Z_pr-109-issue-1.md  TODO_feature_20251109T034949Z_pr-111-issue-1.md  TODO_feature_20251109T035956Z_pr-114-issue-1.md  TODO_feature_20251109T045314Z_pr-119-docs-clarifications.md  TODO_feature_20251109T133524Z_pre-pr-rebase.md  TODO_feature_20251109T141825Z_pr-133-issues.md  TODO_feature_20251109T160102Z_pr-139-issues.md  TODO_feature_20251110T065802Z_pr-145-issues.md  TODO_feature_20251110T070931Z_pr-119-issues.md  TODO_feature_20251110T074722Z_pr-150-issue-1.md  TODO_feature_20251110T074806Z_pr-150-issue-2.md  TODO_feature_20251117T024349Z_phase-2-engine.md  TODO_feature_20251118T021839Z_phase-4-defaults.md  TODO_feature_20251118T115035Z_issue-243-todo-status.md  TODO_feature_20251118T115037Z_issue-244-worktree-path.md  (+10 more)
(+615 files in other folders)
