[project]
name = "german"
version = "1.8.3"
description = "German language learning resources and tools"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.4.2",
    "pydantic>=2.12.3",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/german"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 170
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
".claude/**/*.py" = ["N999"]

[tool.mypy]
python_version = "3.11"
strict = true

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.1",
]
